Revert back to Arrays.asList